# linkredirbot

./: .gitignore  Cargo.toml  Dockerfile  flake.nix
src/: link.rs  main.rs
