[package]
name = "linkredirbot"
version = "0.1.0"
edition = "2021"
description = "A simple bot that replies to links with another better alternative for it"
license = "The Unlicense"
repository = "https://github.com/Henriquelay/linkredirbot"
readme = "README.md"
keywords = ["telegram", "bot", "link", "redirect", "teloxide"]
categories = ["chatbot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["rustls"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
url = "2.4.1"
